# Agentic_Graph_RAG_as_a_service

./: .pre-commit-config.yaml  ARCHITECTURE.md  Output  README.md  main.py  pyproject.toml  run_api.py
Sample_output/: Attention_is_all_you_need_Knowledge.json  ontology_3i4ywzdr.json
agents/: __init__.py  llm_orchestrator.py  query_agent.py  strategy_selector.py
apis/: __init__.py  routes.py  sdk.py
config/: settings.py
core/: contextual_retriever.py  node_processor.py  pdf_parser.py
database_adapters/: __init__.py  database_factory.py  neo4j_adapter.py  neptune_adapter.py
database_adapters/vector/: qdrant_adapter.py
di/: __init__.py  container.py  factories.py
evaluation/: __init__.py  evaluation_service.py
interfaces/: __init__.py  icontextual_retriever.py  idatabase_manager.py  iembedding_provider.py  iembeddings.py  ientity_extractor.py  ievaluation_service.py  igraph_builder.py  imemory_manager.py  inode_processor.py  ipdf_parser.py  iquery_router.py  ivector_database.py
knowledge_graph/: entity_extractor.py  graph_builder.py  neo4j_manager.py  ontology_editor.py
ontology_versioning/: __init__.py
plugins/: __init__.py  registry.py
plugins/database/: __init__.py  neo4j_plugin.py  neptune_plugin.py
plugins/query/: __init__.py  filter_plugin.py  graph_plugin.py  vector_plugin.py
query/: __init__.py  advanced_router.py  contextual_response.py  fusion.py  graph_query.py  query_router.py  vector_query.py
tests/: __init__.py  test_database_adapters.py  test_query_system.py
ui/: gradio_app.py
utils/: embeddings.py  helpers.py  memory_manager.py  opik_tracer.py
